--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <div class="row">
                     <div class="col-sm-4 col-md-4 col-lg-4">
                       <div class="photo">
-                        <img src="images/sergio.jpeg" alt="Sergio Luiz Alonso">
+                        <img src="images/sergio.png" alt="Sergio Luiz Alonso">
                       </div>
                     </div>
 
