Alteração da lista de cargos

--- a/index.html
+++ b/index.html
@@ -97,10 +97,22 @@
                         <h1>Sergio Luiz Alonso</h1>
                         <div class="owl-carousel text-rotation">                                    
                           <div class="item">
-                            <div class="sp-subtitle">Web Designer</div>
+                            <div class="sp-subtitle">Analista de Sistemas</div>
                           </div>
                           <div class="item">
-                            <div class="sp-subtitle">Frontend-developer</div>
+                            <div class="sp-subtitle">Analista Desenvolvedor</div>
+                          </div>
+                          <div class="item">
+                            <div class="sp-subtitle">Controller</div>
+                          </div>
+                          <div class="item">
+                            <div class="sp-subtitle">Desenvolvedor Frontend-Dart-Flutter</div>
+                          </div>
+                          <div class="item">
+                            <div class="sp-subtitle">Desenvolvedor Backend-NodeJS</div>
+                          </div>
+                          <div class="item">
+                            <div class="sp-subtitle">Desenvolvedor Wordpress</div>
                           </div>
                         </div>
                       </div>
