--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <header id="site_header" class="header mobile-menu-hide">
         <div class="header-content">
           <div class="site-title-block mobile-hidden">
-            <a href="index.html#home"><div class="site-title">Sergio <span>Luiz Alonso</span></div></a>
+            <a href="index.html#home"><div class="site-title"> <span>Sergio Luiz Alonso</span></div></a>
           </div>
 
           <!-- Navigation -->
@@ -132,7 +132,7 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="about-me">
                         <div class="block-title">
-                          <h3>Quem <span>Sou?</span></h3>
+                          <h3>Apresentando-me<span></span></h3>
                         </div>
                         <p>Olá! Eu sou a Sergio Luiz Alonso. Gosto de gatos, video games e programação. Aqui você irá encontrar algumas outras
                         informações sobre mim.</p>
