Mensagem de apresentação

--- a/index.html
+++ b/index.html
@@ -134,8 +134,10 @@
                         <div class="block-title">
                           <h3>Apresentando-me<span></span></h3>
                         </div>
-                        <p>Olá! Eu sou a Sergio Luiz Alonso. Gosto de gatos, video games e programação. Aqui você irá encontrar algumas outras
-                        informações sobre mim.</p>
+                        <p>Em constante desenvolvimento de minhas habilidades e crescimento profissional.
+                           Dentre minhas experiências em diversas ferramentas de Administrativo, Contábil, 
+                           Estoque, Financeito e BI, concentro minha atenção na aplicabilidade da Informática 
+                           na administração e gerenciamento destes Controles.</p>
                       </div>
                       <div class="download-resume">
                         <a href="cv/sergio.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
