--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                     <div class="col-sm-12 col-md-12 col-lg-12">
                       <div class="block">
                         <div class="center download-resume">
-                          <a href="cv/resume.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
+                          <a href="cv/sergio.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
                         </div>
                       </div>
                     </div>
@@ -328,7 +328,7 @@
                   <div class="row">
                     <div class="col-sm-12 col-md-12">
                       <div class="block-title">
-                        <h3>Sou <span>boa em...</span></h3>
+                        <h3> <span>Tenho domínio em...</span></h3>
                       </div>
                     </div>
 
