--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <a class="pt-trigger" href="index.html#resume">Currículo</a>
               </li>
               <li>
-                <a class="pt-trigger" href="index.html#services">Serviços</a>
+                <a class="pt-trigger" href="index.html#services">Habilidades</a>
               </li>
               <!--
               <li>
@@ -323,7 +323,7 @@
             <section class="pt-page" data-id="services">
               <div class="section-inner custom-page-content">
                 <div class="page-header color-1">
-                  <h2>Serviços Prestados</h2>
+                  <h2>Habilidades</h2>
                 </div>
                 <div class="page-content">
                   <!-- My Services -->
