--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sergio Luiz Alonso</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="description" content="Curriculum vitae Sergio Luiz Alonso" />
-    <meta name="keywords" content="curriculo, vitae, geek, university, git, github" />
+    <meta name="keywords" content="curriculo, vitae, sergio, alonso, git, github" />
     <link rel="shortcut icon" href="favicon.ico">
 
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -730,7 +730,7 @@
       <!-- /Main Content -->
     </div>
     <footer>
-      <div class="copyrights">&copy; Geek University</div>
+      <div class="copyrights">&copy; Sergio Luiz Alonso</div>
     </footer>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/pages-switcher.js"></script>
