--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
                           <!-- Experience 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Web Designer</h4>
+                            <h4 class="item-title">Análise de Sistemas</h4>
                             <span class="item-period">Dec 2011 - Nov 2012</span>
                             <span class="item-small">Apple Inc.</span>
                             <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
@@ -255,7 +255,7 @@
                         </div>
 
                         <div class="skills-info">
-                          <h4>Web Design</h4>                               
+                          <h4>Análise de Sistemas</h4>                               
                           <div class="skill-container">
                             <div class="skill-percentage skill-1"></div>
                           </div>
@@ -341,7 +341,7 @@
                           <div class="service-image">
                             <img src="images/service/web_design_icon.png" alt="Responsive Design" class="mCS_img_loaded">
                           </div>
-                          <h4>Web Design</h4>
+                          <h4>Análise de Sistemas</h4>
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
                         </div>
                       </div>
@@ -351,9 +351,9 @@
                       <div class="service-block"> 
                         <div class="service-info">
                           <div class="service-image">
-                            <img src="images/service/photography_icon.png" alt="Photography" class="mCS_img_loaded">
+                            <img src="images/service/photography_icon.png" alt="Desenvolvimento Web" class="mCS_img_loaded">
                           </div>
-                          <h4>Photography</h4>
+                          <h4>Desenvolvimento Web</h4>
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
                         </div>
                       </div>
@@ -365,7 +365,7 @@
                           <div class="service-image">
                             <img src="images/service/creativity_icon.png" alt="Creativity" class="mCS_img_loaded">
                           </div>
-                          <h4>Management</h4>
+                          <h4>Controller</h4>
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
                         </div>
                       </div>
@@ -377,7 +377,7 @@
                           <div class="service-image">
                             <img src="images/service/advetising_icon.png" alt="Advetising" class="mCS_img_loaded">
                           </div>
-                          <h4>Advertising</h4>
+                          <h4>Desenvolvimento Mobile</h4>
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
                         </div>
                       </div>
@@ -544,7 +544,7 @@
                         <a class="filter btn btn-sm btn-link active" data-group="all">Tudo</a>
                       </li>
                       <li>
-                        <a class="filter btn btn-sm btn-link" data-group="media">Web Design</a>
+                        <a class="filter btn btn-sm btn-link" data-group="media">Análise de Sistemas</a>
                       </li>
                       <li>
                         <a class="filter btn btn-sm btn-link" data-group="illustration">SEO</a>
