--- a/index.html
+++ b/index.html
@@ -351,9 +351,9 @@
                       <div class="service-block"> 
                         <div class="service-info">
                           <div class="service-image">
-                            <img src="images/service/photography_icon.png" alt="Desenvolvimento Web" class="mCS_img_loaded">
+                            <img src="images/service/photography_icon.png" alt="Developer Web" class="mCS_img_loaded">
                           </div>
-                          <h4>Desenvolvimento Web</h4>
+                          <h4>Developer Web</h4>
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
                         </div>
                       </div>
@@ -377,7 +377,7 @@
                           <div class="service-image">
                             <img src="images/service/advetising_icon.png" alt="Advetising" class="mCS_img_loaded">
                           </div>
-                          <h4>Desenvolvimento Mobile</h4>
+                          <h4>Developer Mobile</h4>
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
                         </div>
                       </div>
