Descrição das habilidades

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                             <img src="images/service/web_design_icon.png" alt="Responsive Design" class="mCS_img_loaded">
                           </div>
                           <h4>Análise de Sistemas</h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                          <p>Estruturação da arquitetura para informatização sob demanda.</p>
                         </div>
                       </div>
                     </div>
@@ -354,7 +354,7 @@
                             <img src="images/service/photography_icon.png" alt="Developer Web" class="mCS_img_loaded">
                           </div>
                           <h4>Developer Web</h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                          <p>Desenvolvimento Wordpress, Dart-Flutter e NodeJS para backend.</p>
                         </div>
                       </div>
                     </div>
@@ -366,7 +366,7 @@
                             <img src="images/service/creativity_icon.png" alt="Creativity" class="mCS_img_loaded">
                           </div>
                           <h4>Controller</h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                          <p>Gerenciamento e aperfeiçoamento da gestão de processos e negócios da Empresa.</p>
                         </div>
                       </div>
                     </div>
@@ -378,7 +378,7 @@
                             <img src="images/service/advetising_icon.png" alt="Advetising" class="mCS_img_loaded">
                           </div>
                           <h4>Developer Mobile</h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                          <p>Desenvolvimento Dart-Flutter multiplataforma de app's mono ou frontend.</p>
                         </div>
                       </div>
                     </div>
