troca dos ícones de habilidades

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                         <div class="service-info">
                           <!--<i class="service-icon fa fa-shopping-cart"></i>-->
                           <div class="service-image">
-                            <img src="images/service/web_design_icon.png" alt="Responsive Design" class="mCS_img_loaded">
+                            <img src="images/service/analise.png" alt="Responsive Design" class="mCS_img_loaded">
                           </div>
                           <h4>Análise de Sistemas</h4>
                           <p>Estruturação da arquitetura para informatização sob demanda.</p>
@@ -351,7 +351,7 @@
                       <div class="service-block"> 
                         <div class="service-info">
                           <div class="service-image">
-                            <img src="images/service/photography_icon.png" alt="Developer Web" class="mCS_img_loaded">
+                            <img src="images/service/web.png" alt="Developer Web" class="mCS_img_loaded">
                           </div>
                           <h4>Developer Web</h4>
                           <p>Desenvolvimento Wordpress, Dart-Flutter e NodeJS para backend.</p>
@@ -363,7 +363,7 @@
                       <div class="service-block"> 
                         <div class="service-info">
                           <div class="service-image">
-                            <img src="images/service/creativity_icon.png" alt="Creativity" class="mCS_img_loaded">
+                            <img src="images/service/controller.png" alt="Creativity" class="mCS_img_loaded">
                           </div>
                           <h4>Controller</h4>
                           <p>Gerenciamento e aperfeiçoamento da gestão de processos e negócios da Empresa.</p>
@@ -375,7 +375,7 @@
                       <div class="service-block"> 
                         <div class="service-info">
                           <div class="service-image">
-                            <img src="images/service/advetising_icon.png" alt="Advetising" class="mCS_img_loaded">
+                            <img src="images/service/mobile.png" alt="Advetising" class="mCS_img_loaded">
                           </div>
                           <h4>Developer Mobile</h4>
                           <p>Desenvolvimento Dart-Flutter multiplataforma de app's mono ou frontend.</p>
