Curriculo-educação-experiência profissional

--- a/index.html
+++ b/index.html
@@ -181,28 +181,28 @@
                         <div class="timeline">
                           <!-- Education 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Formação</h4>
+                            <span class="item-period">1986</span>
+                            <span class="item-small">Faculdades Tibiriçá</span>
+                            <p class="item-description">Administração de Empresas.</p>
                           </div>
                           <!-- / Education 1 -->
 
                           <!-- Education 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Especialização</h4>
+                            <span class="item-period">2007</span>
+                            <span class="item-small">Computwese</span>
+                            <p class="item-description">Consultor SAP Busines One.</p>
                           </div>
                           <!-- / Education 2 -->
 
                           <!-- Education 3 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Especialização</h4>
+                            <span class="item-period">2008 até atual </span>
+                            <span class="item-small">Udemy</span>
+                            <p class="item-description">Git e Github, Dart, Flutter, Wordpress, NodeJS, Gerência de Projetos e outros.</p>
                           </div>
                           <!-- / Education 3 -->
                         </div>
@@ -218,28 +218,28 @@
                         <div class="timeline">
                           <!-- Experience 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Frontend-developer</h4>
-                            <span class="item-period">Dec 2012 - Current</span>
-                            <span class="item-small">Web Agency</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Análise de Sistemas</h4>
+                            <span class="item-period">Fev 2004 - Jan 2017</span>
+                            <span class="item-small">Aut Service Comércio e Serviços Ltda.</span>
+                            <p class="item-description">Criação do Departamento de TI; Desenvolvimento de pequenos aplicativos para controles; Parceria na implantação do ERP SAP B1.</p>
                           </div>
                           <!-- / Experience 1 -->
 
                           <!-- Experience 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Análise de Sistemas</h4>
-                            <span class="item-period">Dec 2011 - Nov 2012</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Desenvolvimento Web</h4>
+                            <span class="item-period">Fev 2017 - jan 2019</span>
+                            <span class="item-small">Decisão e Solução Informática Ltda. ME.</span>
+                            <p class="item-description">Desenvolvimento de aplicativos utilizando Wordpress e NodeJS.</p>
                           </div>
                           <!-- / Experience 2 -->
 
                           <!-- Experience 3 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Graphic Designer</h4>
-                            <span class="item-period">Jan 2010 - Dec 2011</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title"></h4>
+                            <span class="item-period">Fev 2019 - Dec 2022</span>
+                            <span class="item-small">Decisão e Solução Informática Ltda. ME.</span>
+                            <p class="item-description">Projeto ERP em Dart-Flutter para frontend e NodeJS para backend.</p>
                           </div>
                           <!-- / Experience 3 -->
                         </div>
@@ -255,17 +255,17 @@
                         </div>
 
                         <div class="skills-info">
-                          <h4>Análise de Sistemas</h4>                               
+                          <h4>Controller</h4>                               
                           <div class="skill-container">
                             <div class="skill-percentage skill-1"></div>
                           </div>
 
-                          <h4>Graphic Design</h4>
+                          <h4>Wordpress</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-2"></div>
                           </div>
 
-                          <h4>Print Design</h4>
+                          <h4>Dart-Flutter</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-3"></div>
                           </div> 
@@ -281,12 +281,12 @@
                         </div>
 
                         <div class="skills-info">
-                          <h4>HTML5</h4>                               
+                          <h4>Análise de Sistemas</h4>                               
                           <div class="skill-container">
                             <div class="skill-percentage skill-4"></div>
                           </div>
 
-                          <h4>CSS3/LESS/SASS</h4>
+                          <h4>NodeJS</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-5"></div>
                           </div>
