--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                             <h4 class="item-title"></h4>
                             <span class="item-period">Fev 2019 - Dec 2022</span>
                             <span class="item-small">Decisão e Solução Informática Ltda. ME.</span>
-                            <p class="item-description">Projeto ERP em Dart-Flutter para frontend e NodeJS para backend.</p>
+                            <p class="item-description">Projeto ERP em Dart-Flutter para frontend e NodeJS para backend, utilizando Docker e Kubernete.</p>
                           </div>
                           <!-- / Experience 3 -->
                         </div>
