--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <ul class="info-list">
                         <li><span class="title">Idade</span><span class="value">62</span></li>
-                        <li><span class="title">Nacionalidade</span><span class="value">Brasil</span></li>
+                        <li><span class="title">Nacionalidade</span><span class="value">Brasileiro</span></li>
                         <li><span class="title">Cidade/Estado</span><span class="value">São Paulo, SP</span></li>
                         <li><span class="title">E-mail</span><span class="value">sergio@decisao.info</span></li>
                         <li><span class="title">Fone</span><span class="value">+5511 95350-2945</span></li>
